--- a/ZuriTest/app/src/main/res/layout/activity_main.xml
+++ b/ZuriTest/app/src/main/res/layout/activity_main.xml
@@ -9,15 +9,25 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/tv"
+        android:id="@+id/greet"
         style="@style/TextAppearance.AppCompat"
-
         android:layout_marginStart="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+        android:text="@string/hello"
+        android:textSize="25sp" />
+    <TextView
+        android:layout_marginTop="20dp"
+        android:id="@+id/tv"
+        style="@style/TextAppearance.AppCompat"
+        android:layout_marginStart="18dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_gravity="center_horizontal"
         android:text="@string/app_textView"
-        android:textColor="@color/green"
+        android:textColor="#1385DF"
         android:textSize="25sp" />
 
     <Button
@@ -26,6 +36,7 @@ android:layout_marginTop="70dp"
         android:id="@+id/btnIncrease"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:layout_gravity="center_horizontal"
         app:icon="@drawable/plus_1"
         tools:layout_editor_absoluteX="180dp"
@@ -40,6 +51,7 @@ android:layout_marginTop="70dp"
         android:layout_height="90dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="50dp"
+        android:gravity="center"
         android:hint="Value"
         android:padding="17dp"
         android:textColor="@color/black"
@@ -52,6 +64,7 @@ android:layout_marginTop="70dp"
         android:id="@+id/btnDecrease"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:gravity="center"
 
         android:layout_gravity="center_horizontal"
         app:icon="@drawable/minus_1"
