--- a/zContact/app/src/main/res/layout/contact_list.xml
+++ b/zContact/app/src/main/res/layout/contact_list.xml
@@ -8,8 +8,7 @@
 
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       >
+       android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tvName"
            app:layout_constraintStart_toStartOf="parent"
